--- a/intro.html
+++ b/intro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <title>Homepage</title>
+    <title>Intro</title>
 </head>
 
 <body>
@@ -107,7 +107,16 @@
             </div>
             <div class="product-list" >
                 <div class="product-item">
-                    <img src="" />
+                    <img src="/image/product-1.jpg" />
+                </div>
+                <div class="product-item">
+                    <img src="/image/product-2.jpg" />
+                </div>
+                <div class="product-item">
+                    <img src="/image/product-3.jpg" />
+                </div>
+                <div class="product-item">
+                    <img src="/image/product-4.jpg" />
                 </div>
             </div>
         </div>
