--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -79,7 +79,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -88,7 +88,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -97,7 +97,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -106,7 +106,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -115,7 +115,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -124,7 +124,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -133,7 +133,7 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -142,7 +142,32 @@
                                 <h4>Súp trâu</h4>
                                 <div class="d-flex justify-content-between">
                                     <p class="price headline">80.000 VND</p>
-                                    <button class="btn-outlien-red">Liên hệ</button>
+                                    <button class="btn-outline-red">Liên hệ</button>
+                                </div>
+                            </div>
+
+                            <div class="product-item">
+                                <img src="/image/product-sample.jpg" />
+                                <h4>Súp trâu</h4>
+                                <div class="d-flex justify-content-between">
+                                    <p class="price headline">80.000 VND</p>
+                                    <button class="btn-outline-red">Liên hệ</button>
+                                </div>
+                            </div>
+                            <div class="product-item">
+                                <img src="/image/product-sample.jpg" />
+                                <h4>Súp trâu</h4>
+                                <div class="d-flex justify-content-between">
+                                    <p class="price headline">80.000 VND</p>
+                                    <button class="btn-outline-red">Liên hệ</button>
+                                </div>
+                            </div>
+                            <div class="product-item">
+                                <img src="/image/product-sample.jpg" />
+                                <h4>Súp trâu</h4>
+                                <div class="d-flex justify-content-between">
+                                    <p class="price headline">80.000 VND</p>
+                                    <button class="btn-outline-red">Liên hệ</button>
                                 </div>
                             </div>
 
@@ -160,8 +185,8 @@
                         </div>
                         <h4 class="headline">danh mục</h4>
                         <ul class="categories">
-                            <li><a href="/menu.html" class="active">Món Đặc sản</a></li>
-                            <li><a href="/menu.html" >Món Khai vị</a></li>
+                            <li><a href="/menu.html" >Món Đặc sản</a></li>
+                            <li><a href="/menu.html" class="active">Món Khai vị</a></li>
                             <li><a href="/menu.html" >Món Chính</a></li>
                             <li><a href="/menu.html" >Món Tráng miệng</a></li>
                             <li><a href="/menu.html" >Thức uống</a></li>
