--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,151 @@
-i
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <title>LIÊN HỆ</title>
+</head>
+
+<body>
+    <header id="header">
+        <div class="container header-top">
+            <div class="row">
+                <div class="col-md-3 logo">
+                    <img src="image/logo.png" />
+                </div>
+                <div class="col-md-6 logo-name">
+                    <h1>NHÀ HÀNG KIẾN MINH</h1>
+                </div>
+                <div class="col-md-3 pl-0 pr-0">
+                    <div class="contact d-flex align-items-center">
+                        <div class="contact-icon">
+                            <img src="/image/phone_green.svg" />
+                        </div>
+                        <p><a href="tel:0904 999 222 ">0904 999 222 </a></p>
+                        &nbsp;
+                        &nbsp;
+                        <div class="contact-icon">
+                            <img src="/image/phone_2_green.svg" />
+                        </div>
+                        <p><a href="tel:024 37 345 678 ">024 37 345 678</a><br />
+                            <a href="tel: 024 38 789 789 "> 024 38 789 789 </a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header-bottom">
+            <div class="container">
+                <ul>
+                    <li><a href="/">Trang chủ</a></li>
+                    <li><a href="/intro.html">Giới thiệu</a></li>
+                    <li><a href="/menu.html">Thực đơn</a></li>
+                    <li><a href="/order.html">Đặt bàn</a></li>
+                    <li><a href="/news.html">Tin nổi bật</a></li>
+                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                </ul>
+                <div class="search">
+                    <!-- <input placeholder="Tìm kiếm" /> -->
+                    <img src="/image/search-white_icon.svg" />
+                </div>
+            </div>
+        </div>
+
+    </header>
+    <section class="main-content ">
+        <div class="banner-title">
+            <h4 class="headline">Liên hệ</h4>
+        </div>
+        <div class="contact-page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2 class="headline">Nhà hàng kiến minh</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. </p>
+                        <div class="social-icon">
+                            <a href="mailto:email@email.com"><img src="/image/emailb_icon.svg" />email@email.com </a>
+                            <a href="mailto:email@email.com"> <img src="/image/phoneb_icon.svg" /> 0904 999 222 </a>
+                            <a href="mailto:email@email.com"> <img src="/image/teleb_icon.svg" /> 024 37 345 678 - 024 38
+                                789 789
+                            </a>
+                            <a href="mailto:email@email.com"> <img src="/image/locationb_icon.svg" /> Chân Cầu Vượt Phú
+                                Thụy
+                                Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62711.88324792996!2d106.70089469090698!3d10.773525260473217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1e166124bd%3A0x88a7bac6d1ff76f5!2zQ2jhu6MgSG9hIEjhu5MgVGjhu4sgS-G7tw!5e0!3m2!1svi!2s!4v1601268535119!5m2!1svi!2s"
+                        width="100%" height="336" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="container footer-top">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="logo">
+                        <img src="image/logo-white.png" />
+                    </div>
+                    <a href="mailto:email@email.com"><img src="/image/email_icon.svg" />email@email.com </a>
+                    <a href="mailto:email@email.com"> <img src="/image/phone_icon.svg" /> 0904 999 222 </a>
+                    <a href="mailto:email@email.com"> <img src="/image/tele_icon.svg" /> 024 37 345 678 - 024 38 789 789
+                    </a>
+                    <a href="mailto:email@email.com"> <img src="/image/location_icon.svg" /> Chân Cầu Vượt Phú Thụy
+                        Xã Dương Xá - Gia Lâm - Tp Hà Nội </a>
+
+                </div>
+                <div class="col-md-4">
+                    <h3 class="headline">Bản đồ</h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62711.88324792996!2d106.70089469090698!3d10.773525260473217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1e166124bd%3A0x88a7bac6d1ff76f5!2zQ2jhu6MgSG9hIEjhu5MgVGjhu4sgS-G7tw!5e0!3m2!1svi!2s!4v1601268535119!5m2!1svi!2s"
+                        width="100%" height="224" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="headline">Fanpage</h3>
+
+                    <div class="fb-page" data-href="https://www.facebook.com/thicongxddalat/" data-tabs="timeline"
+                        data-width="" data-height="224" data-small-header="false" data-adapt-container-width="true"
+                        data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/thicongxddalat/" class="fb-xfbml-parse-ignore"><a
+                                href="https://www.facebook.com/thicongxddalat/">Thi Công Xây Dựng Đà Lạt</a>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>Copyrights © 2017 All Rights Reserved. Powered by BUSO</p>
+        </div>
+
+    </footer>
+
+</body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
+
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v8.0&appId=888673124847518&autoLogAppEvents=1"
+    nonce="oUuGwdzk"></script>
+
+
+</html>
