--- a/news.html
+++ b/news.html
@@ -67,7 +67,67 @@
                         <div class="news-list">
                             <div class="news-item">
                                 <img src="/image/product-sample.jpg" />
-                                <div class="new-content">
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
+                                    <h4>Chương trình khuyến mãi tháng 8</h4>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                        officia consequat duis enim velit mollit. Exercitation veni...</p>
+                                    <a href="/news-detail.html" class="btn-outline-green">Đọc tiếp</a>
+                                </div>
+                            </div>
+
+                            <div class="news-item">
+                                <img src="/image/product-sample.jpg" />
+                                <div class="news-content">
                                     <h4>Chương trình khuyến mãi tháng 8</h4>
                                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                                         officia consequat duis enim velit mollit. Exercitation veni...</p>
@@ -92,6 +152,28 @@
                             <li><a href="/news.html" class="active">Chương trình ca nhạc</a></li>
                         </ul>
                         <h4 class="headline">tin nổi bật</h4>
+                        <ul class="hot-news">
+                            <li>
+                                <a href="/news-detail.html">
+                                    <img src="/image/product-sample.jpg" />
+                                    Chương trình khuyến mãi tháng 8
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="/news-detail.html">
+                                    <img src="/image/product-sample.jpg" />
+                                    Chương trình khuyến mãi tháng 8
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="/news-detail.html">
+                                    <img src="/image/product-sample.jpg" />
+                                    Chương trình khuyến mãi tháng 8
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
