--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 <body>
     <header id="header">
         <div class="container header-top">
-            <div class="row">
-                <div class="col-md-3 logo">
+            <div class="d-flex align-items-center justify-content-between">
+                <div class=" logo">
                     <img src="image/logo.png" />
                 </div>
-                <div class="col-md-6 logo-name">
+                <div class=" logo-name">
                     <h1>NHÀ HÀNG KIẾN MINH</h1>
                 </div>
-                <div class="col-md-3 pl-0 pr-0">
+                <div class="">
                     <div class="contact d-flex align-items-center">
                         <div class="contact-icon">
                             <img src="/image/phone_green.svg" />
@@ -40,7 +40,13 @@
         </div>
         <div class="container-fluid header-bottom">
             <div class="container">
-                <ul>
+                <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+                    aria-controls="collapseExample">
+                <img src="/image/menu.svg" /></a>
+                <div class="search">
+                    <img src="/image/search-white_icon.svg" />
+                </div>
+                <ul class="d-none d-lg-block">
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/intro.html">Giới thiệu</a></li>
                     <li><a href="/menu.html">Thực đơn</a></li>
@@ -48,10 +54,18 @@
                     <li><a href="/news.html">Tin nổi bật</a></li>
                     <li><a class="active" href="/contact.html">Liên hệ</a></li>
                 </ul>
-                <div class="search">
-                    <!-- <input placeholder="Tìm kiếm" /> -->
-                    <img src="/image/search-white_icon.svg" />
-                </div>
+
+                <ul class="collapse" id="collapseExample">
+                    <li><a href="/">Trang chủ</a></li>
+                    <li><a href="/intro.html">Giới thiệu</a></li>
+                    <li><a href="/menu.html">Thực đơn</a></li>
+                    <li><a href="/order.html">Đặt bàn</a></li>
+                    <li><a href="/news.html">Tin nổi bật</a></li>
+                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                    <li><a href="tel:0904 999 222 ">0904 999 222 </a></li>
+                    <li><a href="tel:024 37 345 678 ">024 37 345 678</a></li>
+                    <li><a href="tel: 024 38 789 789 "> 024 38 789 789 </a></li>
+                </ul>
             </div>
         </div>
 
@@ -70,7 +84,8 @@
                         <div class="social-icon">
                             <a href="mailto:email@email.com"><img src="/image/emailb_icon.svg" />email@email.com </a>
                             <a href="mailto:email@email.com"> <img src="/image/phoneb_icon.svg" /> 0904 999 222 </a>
-                            <a href="mailto:email@email.com"> <img src="/image/teleb_icon.svg" /> 024 37 345 678 - 024 38
+                            <a href="mailto:email@email.com"> <img src="/image/teleb_icon.svg" /> 024 37 345 678 - 024
+                                38
                                 789 789
                             </a>
                             <a href="mailto:email@email.com"> <img src="/image/locationb_icon.svg" /> Chân Cầu Vượt Phú
@@ -80,9 +95,9 @@
                     </div>
                     <div class="col-md-6">
                         <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62711.88324792996!2d106.70089469090698!3d10.773525260473217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1e166124bd%3A0x88a7bac6d1ff76f5!2zQ2jhu6MgSG9hIEjhu5MgVGjhu4sgS-G7tw!5e0!3m2!1svi!2s!4v1601268535119!5m2!1svi!2s"
-                        width="100%" height="336" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d62711.88324792996!2d106.70089469090698!3d10.773525260473217!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1e166124bd%3A0x88a7bac6d1ff76f5!2zQ2jhu6MgSG9hIEjhu5MgVGjhu4sgS-G7tw!5e0!3m2!1svi!2s!4v1601268535119!5m2!1svi!2s"
+                            width="100%" height="336" frameborder="0" style="border:0;" allowfullscreen=""
+                            aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
