--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     </div>
                     <p>Món tráng miệng</p>
                 </div>
-                <div class="col-md-6 p-5">
-                    <div class="menu-border">
+                <div class="col-md-6 menu-border-outer">
+                    <div class="menu-border ">
                         <img src="image/food_1.png" />
                     </div>
                     <h5>Món đặc sản</h5>
