--- a/menu.html
+++ b/menu.html
@@ -49,19 +49,19 @@
                 <ul class="d-none d-lg-block">
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a href="/menu.html">Thực đơn</a></li>
+                    <li><a class="active" href="/menu.html">Thực đơn</a></li>
                     <li><a href="/order.html">Đặt bàn</a></li>
                     <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                    <li><a   href="/contact.html">Liên hệ</a></li>
                 </ul>
 
                 <ul class="collapse" id="collapseExample">
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/intro.html">Giới thiệu</a></li>
-                    <li><a href="/menu.html">Thực đơn</a></li>
+                    <li><a class="active" href="/menu.html">Thực đơn</a></li>
                     <li><a href="/order.html">Đặt bàn</a></li>
                     <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                    <li><a  href="/contact.html">Liên hệ</a></li>
                     <li><a href="tel:0904 999 222 ">0904 999 222 </a></li>
                     <li><a href="tel:024 37 345 678 ">024 37 345 678</a></li>
                     <li><a href="tel: 024 38 789 789 "> 024 38 789 789 </a></li>
