--- a/order.html
+++ b/order.html
@@ -41,8 +41,8 @@
         <div class="container-fluid header-bottom">
             <div class="container">
                 <a class="btn-bar" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-                aria-controls="collapseExample">
-            <img src="/image/menu.svg" /></a>
+                    aria-controls="collapseExample">
+                    <img src="/image/menu.svg" /></a>
                 <div class="search">
                     <img src="/image/search-white_icon.svg" />
                 </div>
@@ -50,18 +50,18 @@
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/intro.html">Giới thiệu</a></li>
                     <li><a href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
+                    <li><a class="active" href="/order.html">Đặt bàn</a></li>
                     <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                    <li><a href="/contact.html">Liên hệ</a></li>
                 </ul>
 
                 <ul class="collapse" id="collapseExample">
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/intro.html">Giới thiệu</a></li>
                     <li><a href="/menu.html">Thực đơn</a></li>
-                    <li><a href="/order.html">Đặt bàn</a></li>
+                    <li><a class="active" href="/order.html">Đặt bàn</a></li>
                     <li><a href="/news.html">Tin nổi bật</a></li>
-                    <li><a class="active" href="/contact.html">Liên hệ</a></li>
+                    <li><a href="/contact.html">Liên hệ</a></li>
                     <li><a href="tel:0904 999 222 ">0904 999 222 </a></li>
                     <li><a href="tel:024 37 345 678 ">024 37 345 678</a></li>
                     <li><a href="tel: 024 38 789 789 "> 024 38 789 789 </a></li>
